# DiffusionAugmentations

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
diffaug_pets/: __init__.py  config.py  logging_utils.py
diffaug_pets/aug/: augmenter.py  matting.py  prompts.py
diffaug_pets/data/: pets.py
diffaug_pets/diffusion/: pipes.py
diffaug_pets/metrics/: clip_filter.py
diffaug_pets/models/: classifier.py
diffaug_pets/scripts/: run_pipeline.py
diffaug_pets/synth/: manifests.py
diffaug_pets/train/: baseline.py  step_matched.py
diffaug_pets/utils/: runtime.py  seed.py
diffaug_pets/vis/: grids.py  lecture_grid.py
notebooks/: diffaug_colab.ipynb  local_run.ipynb
