[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffaug-pets"
version = "0.1.0"
description = "Diffusion augmentation pipeline for Oxford-IIIT Pet (modularized)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["diffaug_pets*"]
